2017-01-31	Tainting and range division -- now with a twist.  (2)

		include/innocent-pear/kthxbai.h ,
		include/innocent-pear/omg.h :
		- upped the maximum number of iterations for inner loops

		include/innocent-pear/orly.h :
		- orly_impl<...>::taint(y, t) now has more probability mass
		  for the alternatives that frob t

		include/innocent-pear/bbq.h :
		- do_op_rept<...>(...) and do_inv_op_rept<...>(...) now
		  properly cast N

2017-01-30	Tainting and range division -- now with a twist.

		include/innocent-pear/orly.h :
		- orly_impl<...>::taint(y, t) may now frob a bit in t after
		  its state is known; result is that solve-vm.py now gives
		  wrong answers for test-orly-1 (for now -- w00t)

2017-01-22	Tainting and range division.  (3)

		include/innocent-pear/orly.h :
		- rewrote and somewhat simplified tainting code
		- taint conditions now depend on `Boreal' template parameter

		include/innocent-pear/bbq.h :
		- somewhat optimized (compile-time) a case in do_op_rept(...)

		test/test-orly-2.cc :
		- upped scrambling levels for first orly<...> operation
		- enabled badness for g2(.)

		test/test-orly-3.cc ,
		test/test-orly-3.good :
		- new

		GNUmakefile :
		- added test-orly-3 test case

		share/innocent-pear/calm.cc ,
		share/innocent-pear/keyboard.cc :
		- removed string scrambling

2017-01-21	Tainting and range division.  (2)

		include/innocent-pear/orly.h :
		- orly<...>::operator()(x0, x1 ... x9) now tries to taint
		  yarly<...>()(x1 ... x9) with x0 even when Levels == 0
		- added "range division" that uses bit-wise test

		include/innocent-pear/unpossible.h ,
		- made unpossible<...> a `class' rather than a `struct' (to
		  stop clang++ warnings)
		- removed redundant definition of `WhichTyp'

		include/innocent-pear/omg.h :
		- made unpossible<...> a `class' rather than a `struct' (to
		  stop clang++ warnings)

		share/innocent-pear/sleepier.cc :
		- now actually checks return values of write(...) and
		  ftruncate(...)
